# STL-Processor

./: .gitignore  CMakeLists.txt  CubeParameterization.h  DX12.sln  PolyCubeParameterization.cpp  PolyCubeParameterization.h  README.md
DX12/: Camera.cpp  Camera.h  DX12.cpp  DX12.h  DX12.rc  DX12.vcxproj  DX12.vcxproj.filters  DX12util.cpp  DX12util.h  FrameResource.cpp  FrameResource.h  GameTimer.cpp  GameTimer.h  HalfEdgeStructure.cpp  HalfEdgeStructure.h  Light.hlsl  LightUtil.hlsl  STLApp.cpp
DX12/Common/: Camera.h  GeometryGenerator.cpp  GeometryGenerator.h  MathHelper.cpp  MathHelper.h  UploadBuffer.h  d3dApp.h  d3dUtil.h
DX12/Models/: Happy.stl  Torus.stl  WrongBunny.stl  bunnyRepaired.stl  bunnyRepaired.vtk  bunnyhole.stl
DX12/Shaders/: color.hlsl  shapes.hlsl
assets/Models/: Bunny.stl  Eight.stl  Sphere.stl  Star.stl  bunny.vtk  bunnyNoisy.stl
assets/Shaders/: Light.hlsl
src/App/: CMakeLists.txt  MeshRenderer.cpp  MeshRenderer.h  STLApp.cpp  STLApp.h  main.cpp
src/DX12Engine/: CMakeLists.txt
src/DX12Engine/include/DX12Engine/: Camera.h  D3DApp.h  D3DUtil.h  DDSTextureLoader.h  DX12Engine.h  FrameResource.h  GameTimer.h  GeometryGenerator.h  MathHelper.h  UploadBuffer.h
src/DX12Engine/src/: Camera.cpp  D3DApp.cpp  D3DUtil.cpp  DDSTextureLoader.cpp  FrameResource.cpp  GameTimer.cpp  GeometryGenerator.cpp  MathHelper.cpp
src/GUI/: CMakeLists.txt
src/GUI/include/GUI/: ImGuiLayer.h  Panels.h
src/GUI/src/: ImGuiLayer.cpp  Panels.cpp
src/MeshCore/: CMakeLists.txt
src/MeshCore/include/MeshCore/: HalfEdgeMesh.h  MeshCore.h  MeshRepair.h  MeshTypes.h  Polycube.h
src/MeshCore/src/: HalfEdgeMesh.cpp  MeshIO.cpp  MeshMath.h  MeshRepair.cpp  Polycube.cpp  PolycubeInternal.h
tests/: CMakeLists.txt  test_mesh_repair.cpp
